Travel::Status::DE::IRIS 1.51 - Thu Oct 22 2020

    * Add BER airport stations
    * Rename Schönefeld airport to BER Terminal 5

Travel::Status::DE::IRIS 1.50 - Thu Oct 15 2020

    * Add station Brunnen(Oberbay)
    * Incorporate station name and eva number changes from DB IRIS
      (affects nine stations)
    * Add geocoordinates to 17 stations previously lacking those

Travel::Status::DE::IRIS 1.49 - Sat Oct 03 2020

    * Add station Jaderberg

Travel::Status::DE::IRIS 1.48 - Sat Aug 22 2020

    * Add stations Neuruppin Seedamm (temporary, teardown expected Dec 2020),
      Amriswil, and Baar(CH)

Travel::Status::DE::IRIS 1.47 - Sat Jun 06 2020

    * Work around (probably incorrect) IRIS coupling of
      Norddeich and Norddeich Mole stations

Travel::Status::DE::IRIS 1.46 - Mon May 04 2020

    * Document LWP::Protocol::https dependency
    * Discourage building with Geo::Distance 0.21.
      Geo::Distance 0.21, released on 7 Mar 2019, is the only release using
      GIS::Distance's distance_km method -- which was removed on 9 Mar 2019
      in GIS::Distance 0.14

Travel::Status::DE::IRIS 1.45 - Wed Mar 18 2020

    * Provide properly versioned Stations.pm file

Travel::Status::DE::IRIS 1.44 - Wed Mar 18 2020

    * Add delay code 67 (Behördliche Anordnung). Patch by @marudor

Travel::Status::DE::IRIS 1.43 - Tue Jan 21 2020

    * db-iris: Correctly set cache expiry. In 1.42, backend replies were cached
      indefinitely due to a typo

Travel::Status::DE::IRIS 1.42 - Wed Jan 15 2020

    * Result: Fix TO_JSON method
    * db-iris: Cache backend results by default
    * db-iris: New options: --json and --no-cache

Travel::Status::DE::IRIS 1.41 - Sun Dec 29 2019

    * Result: Add "wing_of" accessor
    * Follow name and DS100 change of Freiburg West (RFW) to
      Freiburg-Landwasser (RFLW)
    * Add more stations

Travel::Status::DE::IRIS 1.40 - Tue Dec 25 2019

    * Incorporate the last few years' worth of station name changes
